@@ -19,6 +19,7 @@
   * vasprintf for windows updated.  Thanks Geoffroy Couprie!
   * Nokogiri::XML::Node#[]= should not encode entities (LH #55)
   * Namespaces should be copied to reparented nodes (LH #56)
+  * Nokogiri uses encoding set on the string for default in Ruby 1.9
 
 === 1.2.1 / 2008-02-23
 
